<resources>
    <string name="app_name">Rooms</string>
    <string name="e_mail">Email:</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="choose">Choose</string>
    <string name="price_per_bed">Price per bed:</string>
    <string name="twelve_beds_dorm">Twelve beds dorm</string>
    <string name="six_beds_dorm">Six beds dorm</string>
    <string name="eight_beds_dorm">Eight beds dorm</string>
    <string name="_14_50">$14.50</string>
    <string name="_17_56">$17.56</string>
    <string name="_12_01">$12.01</string>
    <string name="rooms">Rooms</string>
    <string name="reservations">Reservations</string>
    <string name="failed_password_match">Passwords do not match</string>
    <string name="empty_name">Field "Name" cannot be empty</string>
    <string name="empty_email">Field "Email" cannot be empty</string>
    <string name="empty_password">Field "Password" cannot be empty</string>
    <string name="empty_password_confirm">Field "Confirm password" cannot be empty</string>
    <string name="strong_password">Please choose a stronger password</string>
    <string name="valid_email">Please use a valid email</string>
    <string name="chosen_email">Chosen email is already in use</string>
    <string name="failed_registration">An error occurred registering, please try again</string>
    <string name="logout">Logout</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="registered_successfully_reservation">Reservation registered successfully</string>
    <string name="logged_out_successfully">Logged out successfully</string>
    <string name="logged_in_successfully">Logged in successfully</string>
    <string name="user_exception">Account not registered</string>
    <string name="account_exception">Email and password do not match</string>
    <string name="failed_login">An error occurred during login, please try again</string>
    <string name="dear_user">Dear user,</string>
    <string name="dear_user_message">In order to choose the dorm you want, you need to login first</string>
    <string name="cancel">Cancel</string>
    <string name="standard_value">$00.00</string>
    <string name="total_rooms">Total beds:</string>
    <string name="_00">00</string>
    <string name="total_days">Total days:</string>
    <string name="payment">Payment:</string>
    <string name="check_standard">Check *</string>
    <string name="currency">Currency:</string>
    <string name="total_value">Total value:</string>
    <string name="total_value_">Total \n value:</string>
    <string name="accept">Accept</string>
    <string name="date">Date</string>
    <string name="next">Next</string>
    <string name="check_in_date">Check-in</string>
    <string name="check_in_date_">Check-in:</string>
    <string name="check_out_date">Check-out</string>
    <string name="check_out_date_">Check-out:</string>
    <string name="payment_">Payment</string>
    <string name="payment_method">Payment method</string>
    <string name="payment_method_">Payment at:</string>
    <string name="exchange_rate_">Exchange rate:</string>
    <string name="currency_">Currency</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="please_date">Please choose a date for check-in and check-out</string>
    <string name="please_date_check_in">Please choose a valid date for check-in first</string>
    <string name="please_date_check_out">Please choose a valid date for check-out first</string>
    <string name="save">Save</string>
    <string name="invalid_date">Invalid date</string>
    <string name="date_registered">Check-in and check-out recorded successfully</string>
    <string name="number_rooms">Beds</string>
    <string name="dash_dash">--</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="bed_numbers">Number of beds</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="jpy">JPY</string>
    <string name="gbp">GBP</string>
    <string name="aud">AUD</string>
    <string name="cad">CAD</string>
    <string name="chf">CHF</string>
    <string name="cny">CNY</string>
    <string name="hkd">HKD</string>
    <string name="nzd">NZD</string>
    <string name="brl">BRL</string>
    <string name="payment_saved">Payment methods saved successfully</string>
    <string name="please_complete">Please set up all the values first</string>
    <string name="date_standard">0000/00/00</string>
    <string name="failed">An error occurred</string>
    <string name="loading">Loading</string>
    <string name="confirm">Please confirm your information</string>
    <string name="sure_confirm">Do you confirm the reservation details?</string>
    <string name="beds">Beds:</string>
    <string name="delete_reservation">Delete reservation</string>
    <string name="sure_delete">Are you sure do you want to delete this reservation?</string>
    <string name="deleted_reservation">Reservation deleted successfully</string>
    <string name="recovering_reservations">Recovering reservations</string>
    <string name="yes">Yes</string>
    <string name="no_reservations_found">No reservations found</string>
    <string name="standard_date">YYYY/MM/DD</string>
    <string name="room_base_value">Room base value:</string>
    <string name="standard_currency">Standard currency:</string>
    <string name="recalculate">Recalculate</string>
    <string name="save_changes">Save changes</string>
    <string name="impossible_one_date">Impossible to recalculate with only one date</string>
    <string name="impossible_recalculate">Unable to recalculate with provided changes</string>
    <string name="sure_update">Are you sure thar you want to update your reservation?</string>
    <string name="update_reservation">Update reservation</string>
    <string name="how_to_use">HOW_TO_USE</string>
    <string name="how_to_use_">Instructions</string>
    <string name="dialog_message">In order to change the check-in or check-out date /n
    is necessary to call the provider to check date availability. /n
    Set up all the information for possible changes, check the new results /n
    and accept if you agree with the new terms.</string>

    <string-array name="payment">
        <item>@string/dash_dash</item>
        <item>@string/check_in_date</item>
        <item>@string/check_out_date</item>
    </string-array>

    <string-array name="room6">
        <item>@string/dash_dash</item>
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
        <item>@string/five</item>
        <item>@string/six</item>
    </string-array>

    <string-array name="room8">
        <item>@string/dash_dash</item>
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
        <item>@string/five</item>
        <item>@string/six</item>
        <item>@string/seven</item>
        <item>@string/eight</item>
    </string-array>

    <string-array name="room12">
        <item>@string/dash_dash</item>
        <item>@string/one</item>
        <item>@string/two</item>
        <item>@string/three</item>
        <item>@string/four</item>
        <item>@string/five</item>
        <item>@string/six</item>
        <item>@string/seven</item>
        <item>@string/eight</item>
        <item>@string/nine</item>
        <item>@string/ten</item>
        <item>@string/eleven</item>
        <item>@string/twelve</item>
    </string-array>

    <string-array name="currency">
        <item>@string/dash_dash</item>
        <item>@string/usd</item>
        <item>@string/eur</item>
        <item>@string/brl</item>
        <item>@string/cad</item>
        <item>@string/jpy</item>
        <item>@string/gbp</item>
        <item>@string/chf</item>
        <item>@string/cny</item>
        <item>@string/nzd</item>
        <item>@string/hkd</item>
        <item>@string/aud</item>
    </string-array>
</resources>