<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group_logged_in"
        android:visible="false">
        <item
            android:icon="@drawable/ic_logout_24"
            android:title="@string/logout"
            android:id="@+id/menu_logout"
            app:showAsAction="ifRoom"/>
    </group>

    <group
        android:id="@+id/group_logged_out"
        android:visible="false">
        <item
            android:icon="@drawable/ic_registration_24"
            android:title="@string/register"
            android:id="@+id/menu_register"
            app:showAsAction="never"/>

        <item
            android:icon="@drawable/ic_login_24"
            android:title="@string/login"
            android:id="@+id/menu_login"
            app:showAsAction="never"/>
    </group>
</menu>